fix chrome text jumping position

--- a/src/components/Tile/Tile.module.css
+++ b/src/components/Tile/Tile.module.css
@@ -4,7 +4,6 @@
   text-align: right;
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
   justify-content: flex-end;
   background: #231f20;
   position: relative;
